k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: board-game-meet-service
spec:
  selector:
    service: board-game-meet
  ports:
    - name: http
      port: 8080
      protocol: TCP
