k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: board-game-meet-ingress
  annotations:
    kubernetes.io/tls-acme: "false"
spec:
  rules:
    - host: board-game-meet-dunad4n.cloud.okteto.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: board-game-meet-service
                port:
                  number: 8080
